<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp">

    <TextView
        android:id="@+id/davl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_davl_text"
        app:layout_constraintTop_toTopOf="@+id/top_davl"
        app:layout_constraintBottom_toBottomOf="@+id/top_davl"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/top_davl"
        style="@style/edit_text_dialog_style"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_4"
        android:hint="@string/_120"
        android:gravity="end"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/barrier_davl"
        app:layout_constraintStart_toEndOf="@id/barrier_text"
        app:layout_constraintEnd_toStartOf="@id/razd"/>
    <TextView
        android:id="@+id/razd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/razd_dialog"
        android:textSize="@dimen/text_28"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/barrier_davl"
        app:layout_constraintStart_toEndOf="@id/top_davl"
        app:layout_constraintEnd_toStartOf="@+id/bottom_davl"/>
    <EditText
        android:id="@+id/bottom_davl"
        style="@style/edit_text_dialog_style"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:hint="@string/_80"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/barrier_davl"
        app:layout_constraintStart_toEndOf="@id/razd"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_davl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="bottom_davl, top_davl, razd"/>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="davl_text, heartbeat_text"/>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="button_cancel, button_ok"/>
    <TextView
        android:id="@+id/heartbeat_text"
        android:text="@string/heartbeat_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/heartbeat"
        app:layout_constraintBottom_toBottomOf="@+id/heartbeat"/>
    <EditText
        android:id="@+id/heartbeat"
        style="@style/edit_text_dialog_style"
        android:layout_height="wrap_content"
        android:hint="@string/_60"
        android:gravity="end"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toEndOf="@+id/barrier_text"
        app:layout_constraintBottom_toBottomOf="@id/barrier_button"
        app:layout_constraintTop_toTopOf="@id/barrier_davl"/>
    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_4"
        app:layout_constraintTop_toTopOf="@id/barrier_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_4"
        app:layout_constraintTop_toTopOf="@id/barrier_button"
        app:layout_constraintEnd_toStartOf="@+id/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>